--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
   </head>
   <body>
+    <header>
+      <nav class="container">
+        <a class="logo" href="">
+          <span>L</span>
+          <span>O</span>
+          <span>G</span>
+          <span>O</span>
+        </a>
+        <div class="nav-toggle"><span></span></div>
+        <form action="" method="get" id="searchform">
+          <input type="text" placeholder="Искать на сайте...">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+        <ul id="menu">
+          <li><a href="">Блог</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Об авторе</a></li>
+        </ul>
+      </nav>
+    </header>
     //
   </body>
 </html>
