--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
         </div>
       </div>
     </footer>
-    ///
+    <script>
+    $('.nav-toggle').on('click', function(){
+      $('#menu').toggleClass('active');
+    });
+    </script>
   </body>
 </html>
